--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "eslint-config-airbnb": "^19.0.4",
+    "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-bootstrap": "^2.7.4",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
